// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpanDetailFlyout /> spec renders the component with data 1`] = `
<body
  class="euiBody-hasOverlayMask euiBody--hasFlyout"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    class="euiOverlayMask euiOverlayMask--belowHeader"
  >
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--small euiFlyout--paddingLarge"
        data-test-subj="spanDetailFlyout"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--inherit euiButtonIcon__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.293 8 3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8Z"
            />
          </svg>
        </button>
        <div
          class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
        >
          <div
            class="euiSpacer euiSpacer--s"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiText euiText--small"
              >
                <h2>
                  Span detail
                </h2>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
        <div
          class="euiFlyoutBody"
        >
          <div
            class="euiFlyoutBody__overflow"
            tabindex="0"
          >
            <div
              class="euiFlyoutBody__overflowContent"
            >
              <div>
                <span
                  class="euiLoadingContent"
                >
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<SpanDetailFlyout /> spec renders the empty component 1`] = `
<body
  class="euiBody-hasOverlayMask euiBody--hasFlyout"
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    class="euiOverlayMask euiOverlayMask--belowHeader"
  >
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        class="euiFlyout euiFlyout--small euiFlyout--paddingLarge"
        data-test-subj="spanDetailFlyout"
        role="dialog"
        tabindex="-1"
      >
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiFlyout__closeButton euiFlyout__closeButton--inside"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonIcon__icon"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
            />
          </svg>
        </button>
        <div
          class="euiFlyoutHeader euiFlyoutHeader--hasBorder"
        >
          <div
            class="euiSpacer euiSpacer--s"
          />
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem"
            >
              <div
                class="euiText euiText--small"
              >
                <h2>
                  Span detail
                </h2>
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            />
          </div>
        </div>
        <div
          class="euiFlyoutBody"
        >
          <div
            class="euiFlyoutBody__overflow"
            tabindex="0"
          >
            <div
              class="euiFlyoutBody__overflowContent"
            >
              <div>
                <span
                  class="euiLoadingContent"
                >
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                  <span
                    class="euiLoadingContent__singleLine"
                  >
                    <span
                      class="euiLoadingContent__singleLineBackground"
                    />
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
